MB-52499: Cancel seqno persistence requests at bucket deletion

A connection waiting for a seqno persistence request can block bucket
deletion, but once DCP has been torn down it's unlikely an outstanding
seqno persistence request will ever complete successfully.

Seqno persistence _does_ have a timeout, but this is only checked when
the flusher runs (and again, during bucket deletion this might not
occur).

To resolve this, temp_fail any outstanding seqno persistence requests
after DCP is torn down during bucket deletion.

This is not a new result users would need to handle; seqno persistence
can result in temp_fail already if it times out or a vbucket is
deleted.

Change-Id: I2e7a59a9d12ae0aaee5300f100136e19defc7aa8
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/176187
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Ben Huddleston <ben.huddleston@couchbase.com>
Well-Formed: Restriction Checker